# Inkr

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/inkr/: main.py  mkv_manager.py  models.py  style.tcss  widgets.py
src/pyinkr/: dialogs.py  main.py  models.py  screen.py  style.tcss  widgets.py
src/pyinkr/wrapper/: mkvmerge.py  schema.py  validation.py
