[project]
name = "pyinkr"
version = "0.2.0"
description = "A tool for managing MKV files"
authors = [{ name = "xMohnad" }]

dependencies = [
  "dacite>=1.9.2",
  "textual>=2.1.2",
  "textual_fspicker>=0.4.1",
]

readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

classifiers = [
  "Environment :: Console",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Terminals",
  "Topic :: Multimedia :: Video",
  "Typing :: Typed",
]

keywords = ["terminal"]

[project.urls]
Homepage = "https://github.com/xMohnad/Inkr"
Repository = "https://github.com/xMohnad/Inkr"
Issues = "https://github.com/xMohnad/Inkr/issues"
Discussions = "https://github.com/xMohnad/Inkr/discussions"

[tool.uv]
managed = true

[dependency-groups]
lint = ["codespell>=2.4.1", "ruff>=0.12.9"]
dev = ["ptpython>=3.0.0", "textual-dev>=1.7.0"]

[tool.hatch.metadata]
allow-direct-references = true


[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyinkr"]

[project.scripts]
inkr = "pyinkr.main:main"

[tool.ruff]
line-length = 120

[tool.pyright]
reportImportCycles = false
reportUnusedCallResult = false
